src/kanka-foundry.scss
button#kanka {
    flex: 0 0 32px;

    > img {
        position: relative;
        top: 4px;
        border: none;
    }
}

.kanka-container {
    .loading-indicator {
        text-align: center;
        padding: 2em 0;

        .fa-spinner {
            animation: kanka-spin 1.5s linear infinite;
            font-size: 2em;
        }
    }

    a {
        color: inherit;
        text-decoration: none;
    }

    hr {
        clear: both;
    }

    .campaign-description {
        .campaign-image {
            width: 33%;
            margin: 0 1em 1em 0;
            float: left;
        }
    }

    details {
        summary {
            font-size: 1.2em;
            border-bottom: 1px solid #782e22;
            margin-bottom: .3em;
            padding: .3em 0;
        }
    }

    .action-row {
        display: flex;
        flex-direction: row;
        align-items: center;

        & > :not(.actions) {
            flex: 1;
        }

        .actions {
            display: flex;
            flex-direction: row;

            button {
                width: auto;
                height: 24px;
                margin: 0;
                padding: 0 4px;
                line-height: 24px;
                text-align: center;
            }
        }
    }
}

.kanka-main-image {
    float: left;
    margin: 0 .5em .5em 0;
    max-width: 30%;

    & + .kanka-metadata {
        max-width: calc(70% - 0.5em);
    }
}

.kanka-metadata {
    .section-header {
        background: rgba(0,0,0,0.1);
    }

    th {
        vertical-align: top;
        text-align: left;
        width: 20%;
        white-space: nowrap;
    }

    th, td {
        padding: .25em .5em;
    }

    .kanka-reference-link {
        color: inherit;
        text-decoration: none;
    }
}

@keyframes kanka-spin {
    100% {
        transform: rotate(360deg);
    }
}

